--- a/package.json
+++ b/package.json
@@ -16,8 +16,15 @@
     "build:prod:deploy": "npm run build:prod && npm run deploy",
     "build:serverless:deploy": "npm run build:serverless && npm run deploy",
     "deploy": "serverless deploy",
+
+
+
     "build:server:prod": "webpack --config webpack.server.config.js --progress --colors",
-    "build:server:serverless": "webpack --config webpack.server.config.js --progress --colors"
+    "build:server:serverless": "webpack --config webpack.server.config.js --progress --colors",
+    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
+    "serve:ssr": "node server.local.js",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server && terser dist/server.js -o dist/server.js -c -m --keep-fnames",
+    "build:client-and-server-bundles": "ng build --prod && ng run jupiter-and-the-giraffe:serve:production"
   },
   "private": true,
   "dependencies": {
@@ -34,7 +41,6 @@
     "@grpc/grpc-js": "^0.6.10",
     "@ng-toolkit/serverless": "^7.1.2",
     "@ng-toolkit/universal": "^1.1.21",
-    "@nguniversal/module-map-ngfactory-loader": "^8.1.1",
     "angularfire2": "^5.0.2",
     "angulartics2": "^7.0.0",
     "aos": "^2.3.3",
@@ -60,6 +66,8 @@
     "@angular/cli": "~8.3.4",
     "@angular/compiler-cli": "~8.2.5",
     "@angular/language-service": "~8.2.5",
+    "@nguniversal/express-engine": "^9.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
