--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,19 @@
 {
-  "database": {
-    "rules": "database.rules.json"
-  }
+  "hosting": [
+    {
+      "target": "jupiter-and-the-giraffe",
+      "public": "dist/jupiter-and-the-giraffe/browser",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
+    }
+  ]
 }
