--- a/serverless.yml
+++ b/serverless.yml
@@ -3,11 +3,12 @@ service: jupiter-and-the-giraffe
 
 plugins:
   - serverless-apigw-binary
+  - serverless-api-compression
 
 provider:
   name: aws
   runtime: nodejs10.x
-  memorySize: 3008
+  memorySize: 192
   timeout: 10
   stage: production
   region: eu-central-1
@@ -27,6 +28,7 @@ package:
    - '!node_modules/mime-db/**'
 
 custom:
+  contentCompression: 1024
   apigwBinary:
     types:
       - '*/*'
