--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,12 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/sitemap.xml",
+              "src/robots.txt",
+              "src/pages.xml",
+              "src/share-image.jpg",
+              "src/logo.png"
             ],
             "styles": [
               "src/assets/sass/main.scss"
