--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
     "@angular-devkit/build-angular": "~0.901.6",
     "@angular/cli": "~9.1.6",
     "@angular/compiler-cli": "~9.1.7",
@@ -66,6 +67,11 @@
     "aos": "^2.3.4",
     "bootstrap": "^4.5.0",
     "codelyzer": "^5.1.2",
+    "firebase-tools": "^7.12.0",
+    "fuzzy": "^0.1.3",
+    "husky": "^4.2.5",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
@@ -73,19 +79,19 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "opencollective": "^1.0.3",
     "protractor": "~5.4.3",
+    "serverless": "^1.60.0",
+    "serverless-apigw-binary": "^0.4.4",
+    "ts-loader": "^6.2.1",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3",
-    "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
-    "firebase-tools": "^7.12.0",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "ts-loader": "^6.2.1",
-    "webpack-cli": "^3.3.10",
-    "opencollective": "^1.0.3",
-    "serverless": "^1.60.0",
-    "serverless-apigw-binary": "^0.4.4"
+    "webpack-cli": "^3.3.10"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
