--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "dev:ssr": "ng run jupiter-and-the-giraffe:serve-ssr",
+    "serve:ssr": "node dist/jupiter-and-the-giraffe/server/main.js",
+    "build:ssr": "ng build --prod && ng run jupiter-and-the-giraffe:server:production",
+    "prerender": "ng run jupiter-and-the-giraffe:prerender",
     "build:browser:prod": "ng build --prod",
     "build:browser:serverless": "ng build --prod --base-href /production/",
     "build:serverless": "npm run build:browser:serverless && npm run build:server:serverless",
@@ -16,76 +20,73 @@
     "build:prod:deploy": "npm run build:prod && npm run deploy",
     "build:serverless:deploy": "npm run build:serverless && npm run deploy",
     "deploy": "serverless deploy",
-    "build:server:prod": "webpack --config webpack.server.config.js --progress --colors",
-    "build:server:serverless": "webpack --config webpack.server.config.js --progress --colors",
-    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
-    "serve:ssr": "node server.local.js",
-    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server && terser dist/server.js -o dist/server.js -c -m --keep-fnames",
-    "build:client-and-server-bundles": "ng build --prod && ng run jupiter-and-the-giraffe:serve:production"
+    "build:server:prod": "ng run jupiter-and-the-giraffe:server && webpack --config webpack.server.config.js --progress --colors",
+    "build:server:serverless": "ng run jupiter-and-the-giraffe:server:serverless && webpack --config webpack.server.config.js --progress --colors"
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.7",
-    "@angular/animations": "~8.2.5",
-    "@angular/common": "~8.2.5",
-    "@angular/compiler": "~8.2.5",
-    "@angular/core": "~8.2.5",
-    "@angular/forms": "~8.2.5",
-    "@angular/platform-browser": "~8.2.5",
-    "@angular/platform-browser-dynamic": "~8.2.5",
-    "@angular/platform-server": "^8.2.6",
-    "@angular/router": "~8.2.5",
-    "@grpc/grpc-js": "^0.6.10",
-    "@ng-toolkit/serverless": "^7.1.2",
-    "@ng-toolkit/universal": "^1.1.21",
-    "angularfire2": "^5.0.2",
-    "angulartics2": "^7.0.0",
-    "aos": "^2.3.3",
-    "aws-serverless-express": "^3.2.0",
-    "bootstrap": "^4.3.1",
-    "bootstrap-scss": "^4.3.1",
-    "cors": "~2.8.4",
-    "cp-cli": "^1.1.0",
-    "firebase": "^5.11.1",
-    "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.0",
-    "firebase-tools": "^8.0.2",
-    "ng-recaptcha": "^5.0.0",
-    "nodemailer": "^6.4.6",
-    "nodemailer-mailgun-transport": "^2.0.0",
-    "path": "^0.12.7",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.21",
-    "@angular/cli": "~8.3.4",
-    "@angular/compiler-cli": "~8.2.5",
-    "@angular/language-service": "~8.2.5",
+    "@angular/animations": "~9.1.7",
+    "@angular/common": "~9.1.7",
+    "@angular/compiler": "~9.1.7",
+    "@angular/core": "~9.1.7",
+    "@angular/fire": "^6.0.2",
+    "@angular/forms": "~9.1.7",
+    "@angular/platform-browser": "~9.1.7",
+    "@angular/platform-browser-dynamic": "~9.1.7",
+    "@angular/platform-server": "~9.1.7",
+    "@angular/router": "~9.1.7",
+    "@ng-toolkit/serverless": "^8.1.0",
+    "@ng-toolkit/universal": "^8.1.0",
     "@nguniversal/express-engine": "^9.1.1",
     "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
-    "@types/jasmine": "~3.3.8",
+    "angulartics2": "^10.0.0",
+    "aws-serverless-express": "^3.3.6",
+    "cors": "^2.8.5",
+    "express": "^4.15.2",
+    "firebase": "^7.16.0",
+    "firebase-admin": "^9.0.0",
+    "firebase-functions": "^3.8.0",
+    "firebase-tools": "^8.6.0",
+    "ng-recaptcha": "^5.0.0",
+    "nodemailer": "^6.4.10",
+    "nodemailer-mailgun-transport": "^2.0.0",
+    "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
+  },
+  "devDependencies": {
+    "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
+    "@angular-devkit/build-angular": "~0.901.6",
+    "@angular/cli": "~9.1.6",
+    "@angular/compiler-cli": "~9.1.7",
+    "@nguniversal/builders": "^9.1.1",
+    "@types/express": "^4.17.0",
+    "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "husky": "^3.1.0",
-    "jasmine-core": "~3.4.0",
+    "@types/node": "^12.11.1",
+    "aos": "^2.3.4",
+    "bootstrap": "^4.5.0",
+    "codelyzer": "^5.1.2",
+    "fuzzy": "^0.1.3",
+    "husky": "^4.2.5",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~3.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "opencollective": "^1.0.3",
-    "protractor": "~5.4.0",
-    "serverless": "1.40.0",
+    "protractor": "~5.4.3",
+    "serverless": "^1.60.0",
     "serverless-apigw-binary": "^0.4.4",
-    "ts-loader": "4.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3",
-    "webpack-cli": "^3.3.8"
+    "ts-loader": "^6.2.1",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~3.8.3",
+    "webpack-cli": "^3.3.10"
   },
   "husky": {
     "hooks": {
